--- a/Web/10.site/style.css
+++ b/Web/10.site/style.css
@@ -11,7 +11,6 @@ body {
 }
 
 header{
-    height: 100px;
     height: 6.25rem;
     position: fixed;
     width: 100vw;
@@ -19,8 +18,9 @@ header{
     align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    border-bottom: #c0c0c0 1px solid;
-    background-color: #C0C0C0
+    border-bottom: #101010 1px solid;
+    background-color: #C0C0C0;
+    z-index: 2;
 }
 
 .logo_header{
@@ -154,22 +154,17 @@ header{
 }
 /*limite header*//*limite header*//*limite header*/
 
+main{
+    /* display: flex;
+    justify-content: space-between; */
+    width: 100%;
+}
 
-/* *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size :20px;
-} */
-
-/* body{
-    display: flex;
-    text-decoration: none;
-    color : white;
-} */
+/* barre laterale */
 
 section.barre_laterale{
+    position:fixed;
+    z-index: -1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -182,7 +177,6 @@ section.barre_laterale{
     display: flex;
     flex-direction: column;
     text-align: center;
-    
 }
 
 .bouton a{
@@ -208,6 +202,7 @@ section.barre_laterale{
     position: relative;
     max-width: 1200px;
     margin: 0 auto;
+    z-index: -1;
   }
   
   .timeline-item {
@@ -251,11 +246,12 @@ section.barre_laterale{
   
 
   .img-preview {
-    width: 100%;
-    height: 200px;
+    width: auto;
+    height: 100%;
     object-fit: cover;
     object-position: center;
   }
+
 
 /*timeline*/
 
@@ -264,6 +260,7 @@ section.barre_laterale{
     position: relative;
     width: 50%;
     overflow: hidden;
+    z-index: -2;
 }
 
 .carousel-container {
@@ -306,6 +303,7 @@ section.barre_laterale{
 
 /* card */
 .card {
+    position: relative;
     border: 5px solid #c0c0c0;
     border-radius: 5px;
     padding: 10px;
